hw13/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yet-another-generator-service
spec:
  type: ClusterIP
  selector:
    app: yet-another-generator
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
