hw13/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yet-another-generator-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yet-another-generator-service
            port:
              number: 80
